--- a/imooc-security-demo/pom.xml
+++ b/imooc-security-demo/pom.xml
@@ -16,6 +16,10 @@
 			<artifactId>imooc-security-browser</artifactId>
 			<version>${imooc-security-core.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
